# TwoSoulsTale

./: .gitignore  CMakeLists.txt  README.md
lib/x64/box2d/: Box2D.lib
lib/x64/tinyxml2/: tinyxml2.lib
lib/x84/box2d/: Box2D.lib
lib/x84/tinyxml2/: tinyxml2.lib
modules/: FindBox2D.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindTinyXML2.cmake  FindirrKlang.cmake
shaders/: circle.vert  flatColor.frag  line.vert  rectangle.vert  spritesheet.frag  spritesheet.vert  textBitmapFont.frag  textBitmapFont.vert  textBitmapFontAdvanced.vert
source/: main.cpp
source/engine/: Game.cpp  Game.hpp
src/: Main.cpp
src/engine/: Game.cpp  Game.hpp
src/engine/audio/: AudioManager.cpp  AudioManager.hpp  AudioResource.cpp  AudioResource.hpp
src/engine/common/patterns/: Singleton.hpp  Singleton.inl
src/engine/common/utility/: BinaryFileIO.cpp  BinaryFileIO.hpp  ColorTypes.hpp  GameTime.hpp  ImageReader.cpp  ImageReader.hpp  IntervalTypes.hpp  MatrixTypes.hpp  ParameterFileIO.cpp  ParameterFileIO.hpp  PathConfig.cpp  PathConfig.hpp  ShapeTypes.hpp  Transform3D.cpp  Transform3D.hpp  TransformTypes.hpp  VectorTypes.hpp  XMLFileIO.cpp  XMLFileIO.hpp
src/engine/debugging/: LoggingManager.cpp  LoggingManager.hpp
src/engine/graphics/: BitmapFontResource.cpp  BitmapFontResource.hpp  GraphicsManager.cpp  GraphicsManager.hpp  ImageResource.cpp  ImageResource.hpp  SpriteSheetResource.cpp  SpriteSheetResource.hpp
src/engine/input/: GamepadListener.hpp  InputManager.cpp  InputManager.hpp  KeyboardListener.hpp  MouseListener.hpp
src/engine/resources/: Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
src/engine/timing/: AlarmListener.hpp  TimingManager.cpp  TimingManager.hpp
src/engine/world/: CollisionManager.cpp  CollisionManager.hpp  GameObject.cpp  GameObject.hpp  GameObjectCollection.cpp  GameObjectCollection.hpp  WorldManager.cpp  WorldManager.hpp
src/game/identifiers/: GameObjectTypeIdentifiers.hpp
src/game/test/: TestObject.cpp  TestObject.hpp  TestObject2.cpp  TestObject2.hpp
src/game/test/unit-tests/: TestImageResource.cpp  TestImageResource.hpp
src/test/: CommonTypesTest.cpp  WorldManagerTest.cpp
